Preparing for dev release
Dynamic Image Resizer DONE! So we can now have the perfect performance on a image-based website. Also, only one or two commits away for the first pre-alpha release (code Harvard Panther) which is a massive milestone for the DSGNR project. If you read this commit message, well you are a true Scholar and a Gentleman

--- a/src/assets/scss/_buttons.scss
+++ b/src/assets/scss/_buttons.scss
@@ -14,8 +14,18 @@ please do not change anything here !
 	@include transition(all $transition-duration);
 
 	&:hover {
+		cursor: pointer;
 		background-color: transparent;
 		color: $dsgnr-black-color;
+	}
+
+	&.btn-secondary {
+		background-color: $dsgnr-secondary-color;
+		border-color: $dsgnr-secondary-color;
+		&:hover {
+			background-color: transparent;
+			color: $dsgnr-secondary-color;
+		}
 	}
 
 	&.btn-primary-outline {
