--- a/src/assets/scss/_buttons.scss
+++ b/src/assets/scss/_buttons.scss
@@ -24,8 +24,18 @@ please do not change anything here !
 			background-color: $color;
 			border-color: $color;
 			&:hover {
+				background-color: desaturate(darken($color, 15%), 30%);
+				color: $dsgnr-white-color;
+			}
+		}
+		&.btn-#{$id}-text {
+			background-color: transparent;
+			border-color: transparent;
+			font-weight: 500;
+			color: $color;
+			&:hover {
+				color: desaturate(darken($color, 15%), 30%);
 				background-color: transparent;
-				color: $color;
 			}
 		}
 		&.btn-#{$id}-outline {
@@ -45,4 +55,6 @@ please do not change anything here !
 	*/
 	&.btn-white-outline:hover { color: $dsgnr-black-color; }
 	&.btn-white { color: $dsgnr-black-color; }
+	&.btn-black:hover { background-color: $dsgnr-dark-color;}
+	&.btn-black-text { padding-left: .75rem; padding-right: .75rem; &:hover { background-color: $dsgnr-light-color; }}
 }
