Dynamic pagination & Implementation of VueX

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -6,8 +6,8 @@ If you don't know what you are doing,
 please do not change anything here !
 
 ————————————————————————————————————————*/
-$dsgnr-primary-color: #FF4365;
-$dsgnr-secondary-color: #92DCE5;
+$dsgnr-primary-color: #623CEA;
+$dsgnr-secondary-color: #FF6978;
 $dsgnr-dark-color: #2D3142;
 $dsgnr-medium-color: #CECECE;
 $dsgnr-light-color: #EFEFEF;
