--- a/src/assets/scss/_text.scss
+++ b/src/assets/scss/_text.scss
@@ -9,7 +9,10 @@ please do not change anything here !
 
 body {
 	font-size: map-get($map: $font-sizes, $key: 'default');
+	font-family: $primary-font-family;
 	color: $dsgnr-dark-color;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 h1 {
